<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_location"
        app:layout_constraintBottom_toBottomOf="@id/et_location"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:text="@string/search_text"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        android:inputType="textMultiLine"
        android:text="@string/id_jakarta_bandung_semarang"
        android:hint="@string/insert_city" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_location"
        app:layout_constraintTop_toBottomOf="@id/et_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        tools:itemCount="5"
        tools:listitem="@layout/weather_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <ProgressBar
        android:id="@+id/progress_weather"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/rv_location"
        app:layout_constraintBottom_toBottomOf="@id/rv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>